TEST_PROGRAMS/VALID/05/bitwise_clear.go
package main

func main() {
	x := 1
	y := 5
	println(x &^ y)
}
