TEST_PROGRAMS/INVALID/03/invalid_return2.go
package main

func main() {

  x:=456
  y = 234
  function(x,y)
  function(x)

  return (x, )
}
